--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
 env:
   global:
   - VERSION="11.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
-  - TRANSIFEX_USER='transbot@odoo-community.org'
+#  - TRANSIFEX_USER='transbot@odoo-community.org'
   matrix:
   - LINT_CHECK="1"
   - TESTS="1" ODOO_REPO="OCA/OCB"
